[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version="0.19"}
gloo="0.8.0"
wasm-bindgen = "0.2.79"
serde="1.0.144"
serde_json = "1.0.85"
web-sys ={version="0.3.56", features=["HtmlInputElement"]}

stylist = {version="0.10.1", features = ["yew"]}

yewdux = "0.8.2"
yew-router="0.16.0"
# for async
wasm-bindgen-futures = "0.4.32"

[[bin]]
name = "start_main"

